--- a/get-started/pricing.html
+++ b/get-started/pricing.html
@@ -241,7 +241,7 @@
 
                         <div class="col-md-2">
                             <b class="m-b-20"> <span style="color: transparent;">-</span></b>
-                            <p class="m-t-20"><a href="#/pricing">Pricing</a></p>
+                            <p class="m-t-20"><a href="pricing.html">Pricing</a></p>
                             <p><a href="https://#" target="_blank">Blog</a></p>
                             <p><a href="#/brand">Brand</a></p>
                             <p><a href="#/support">Support</a></p>
