fixed more links

--- a/get-started/pricing.html
+++ b/get-started/pricing.html
@@ -207,7 +207,7 @@
                                         </div>
 
                                         <div class="text-center">
-                                            <a class="btn btn-lg btn-custom btn-rounded" style="padding: 10px 25px !important" href="https://gwap-eb9b4.firebaseapp.com/get-started/register.html">Get Started Today</a>
+                                            <a class="btn btn-lg btn-custom btn-rounded" style="padding: 10px 25px !important" href="register.html">Get Started Today</a>
                                         </div>
                                     </div>
                                 </article>
@@ -229,7 +229,7 @@
 
                         <div class="col-md-2">
                             <b class="m-b-20">Solutions</b>
-                                <p class="m-t-20"><a href="#/product/invoicing">Pledge Tracking<</a></p>
+                                <p class="m-t-20"><a href="#/product/invoicing">Pledge Tracking</a></p>
                                 <p><a href="#/product/payments">Recurring Giving</a></p>
                                 <p><a href="#/product/transfers">Save2Give</a></p>
                                 <p><a href="#/product/dashboard">Give ‘n’ Earn</a></p>
