fixed more hrefs

--- a/get-started/register.html
+++ b/get-started/register.html
@@ -76,7 +76,7 @@
         <div class="clearfix"></div>
         <div class="wrapper-page">
             <div class="text-center">
-                <a href="http://gwap-eb9b4.firebaseapp.com" class="logo">
+                <a href="../index.html" class="logo">
                     <img src="templates/giveasily/assets/images/logo.png" height="40" />
                 </a>
             </div>
