--- a/get-started/pricing.html
+++ b/get-started/pricing.html
@@ -201,7 +201,7 @@
                                                  </h4>
                                             <p> International cards are charged the equivalent in Naira and settled directly to you just the same as local cards.</p>
 
-                                           <h4> <b>4.9% </b> 🌎 per successful international card charge</h4>
+                                           <h4> 🌎<b>4.9% </b> per successful international card charge</h4>
 
                                            <!-- <p>Local charge fees are capped at ₦2,500.</p> -->
                                         </div>
