--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="row">
               <div class="col-md-6 col-sm-6">
                   <div class="contents text-left">
-                    <h2 class="benefit-headingh wow fadeInDown" data-wow-delay="0.3s"> Give or Receive Donations Easily </h2>
+                    <h2 class="benefit-headingh wow fadeInDown" data-wow-delay="0.3s"> Give or Receive Donations Easily On Multiple Platforms</h2>
                   <div class="wow fadeInUp" data-wow-delay="0.6s">
                     <ul>
                       <li id="hero-text"><i class="zmdi zmdi-check-all"></i> Embed Giveasily effortlessly into your website or mobile app or use our popup widget</li>
