--- a/company.html
+++ b/company.html
@@ -77,15 +77,15 @@
             <div class="dropdown" id="dropdown">
            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> Solutions</button>
           <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Pledge Tracking</a>
-          <a class="dropdown-item" href="#">Recurring Giving</a>
-          <a class="dropdown-item" href="#">Save2Give</a>
-          <a class="dropdown-item" href="#">Give ‘n’ Earn</a>
-          <a class="dropdown-item" href="#">Volunteer Mgt. Tool</a>
-          <a class="dropdown-item" href="#">Membership Mgt. Tool</a>
-          <a class="dropdown-item" href="#">Giveathron</a>
-          <a class="dropdown-item" href="#">Developer Tools</a>
-          </div>
+              <a class="dropdown-item" href="get-started/pledge-tracking.html">Pledge Tracking</a>
+              <a class="dropdown-item" href="get-started/recurring-giving.html">Recurring Giving</a>
+              <a class="dropdown-item" href="get-started/save2give.html">Save2Give</a>
+              <a class="dropdown-item" href="get-started/givenearn.html">Give ‘n’ Earn</a>
+              <a class="dropdown-item" href="get-started/volunteer-mgmt-tool.html">Volunteer Mgt. Tool</a>
+              <a class="dropdown-item" href="get-started/membership-mgmt.html">Membership Mgt. Tool</a>
+              <a class="dropdown-item" href="get-started/giveathron.html">Giveathron</a>
+              <a class="dropdown-item" href="get-started/developer-tools.html">Developer Tools</a>
+            </div>
           </div>
 
           <div class="btn float-right">
@@ -141,7 +141,8 @@
     <section id="services" class="section-padding">
       <div class="container">
         <div class="section-header text-center">
-          <h2 class="benefit-heading wow fadeInDown" data-wow-delay="0.3s"> <br><br><br> Our Company</h2> <p class="benefit-paragraph">Gloveries Business Solutions Ltd is an innovative start-up solution company that focused on developing solutions that solves fundamental problems for a large number of target audiences in Africa by leveraging on modern web & mobile technologies including AI, AR/VR and Blockchain technologies. </p> 
+          <h2 class="benefit-heading wow fadeInDown" data-wow-delay="0.3s"> <br><br><br> Our Company</h2> <p class="benefit-paragraph">Gloveries Business Solutions Ltd is an innovative start-up solution company that focused on developing solutions that solves fundamental problems for a large number of target audiences in Africa by leveraging on modern web & mobile technologies including AI, AR/VR and Blockchain technologies. At Gloveries we are driven by Passion, Innovation, Constant Learning, Transparency, Excellent Customer Service and Giving back to the society.  
+            </p> 
       
           <div class="row">
           </div>
@@ -176,7 +177,7 @@
               </div>
               <div class="info-text">
                 <h3><a href="#">Paul Oseghale</a></h3>
-                <p>Co-Founder/CFO</p>
+                <p>Co-Founder/CEO</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -220,8 +221,8 @@
                 </div>
               </div>
               <div class="info-text">
-                <h3><a href="#">Yusuf Odukoya</a></h3>
-                <p>Front-End Developer</p>
+                <h3><a href="#">Samuel Imafidon</a></h3>
+                <p>Co-Founder/CTO</p>
               </div>
             </div>
             <!-- Team Item Ends -->
@@ -258,14 +259,14 @@ To constantly find simpler, quicker and more innovative ways of helping our clie
   
             <div style="line-height: 20px;" class="col-md-4">
                <h4 style="font-size: 16px; color: #1E0E3C;"> <b class="m-b-20">Solutions</b> </h4>
-                    <p class="m-t-20"><a href="#/product/invoicing">Pledge Tracking</a></p>
-                    <p><a href="#/product/payments">Recurring Giving</a></p>
-                    <p><a href="#/product/transfers">Save2Give</a></p>
-                    <p><a href="#/product/dashboard">Give ‘n’ Earn</a></p>
-                    <p><a href="#/product/checkout">Volunteer Mgt. Tool</a></p>
-                    <p><a href="#/bots">Membership Mgt. Tool</a></p>
-                    <p><a href="#/bots">Giveathron</a></p>
-                    <p><a href="#/bots">Developer Tools</a></p>
+               <p class="m-t-20"><a href="get-started/pledge-tracking.html">Pledge Tracking</a></p>
+               <p><a href="get-started/recurring-giving.html">Recurring Giving</a></p>
+               <p><a href="get-started/save2give.html">Save2Give</a></p>
+               <p><a href="get-started/givenearn.html">Give ‘n’ Earn</a></p>
+               <p><a href="get-started/volunteer-mgmt-tool.html">Volunteer Mgt. Tool</a></p>
+               <p><a href="get-started/membership-mgmt.html">Membership Mgt. Tool</a></p>
+               <p><a href="get-started/giveathron.html">Giveathron</a></p>
+               <p><a href="get-started/developer-tools.html">Developer Tools</a></p>
             </div>
   
             <div style="line-height: 20px;" class="col-md-4">
