--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
             <div class="dropdown" id="dropdown">
            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"> Solutions</button>
           <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Pledge Tracking</a>
-          <a class="dropdown-item" href="#">Recurring Giving</a>
-          <a class="dropdown-item" href="#">Save2Give</a>
-          <a class="dropdown-item" href="#">Give ‘n’ Earn</a>
-          <a class="dropdown-item" href="#">Volunteer Mgt. Tool</a>
-          <a class="dropdown-item" href="#">Membership Mgt. Tool</a>
-          <a class="dropdown-item" href="#">Giveathron</a>
-          <a class="dropdown-item" href="#">Developer Tools</a>
+          <a class="dropdown-item" href="get-started/pledge-tracking.html">Pledge Tracking</a>
+          <a class="dropdown-item" href="get-started/recurring-giving.html">Recurring Giving</a>
+          <a class="dropdown-item" href="get-started/save2give.html">Save2Give</a>
+          <a class="dropdown-item" href="get-started/givenearn.html">Give ‘n’ Earn</a>
+          <a class="dropdown-item" href="get-started/volunteer-mgmt-tool.html">Volunteer Mgt. Tool</a>
+          <a class="dropdown-item" href="get-started/membership-mgmt.html">Membership Mgt. Tool</a>
+          <a class="dropdown-item" href="get-started/giveathron.html">Giveathron</a>
+          <a class="dropdown-item" href="get-started/developer-tools.html">Developer Tools</a>
           </div>
           </div>
 
@@ -148,7 +148,7 @@
                       <li  id="hero-text"><i class="zmdi zmdi-check-all"></i> Never lack what to give. Earn 0.5% on every donation your friends make through Giveasily</li>
                       <br>
                 <div class="header-button wow fadeUp" data-wow-delay="0.3s">
-                  <a href="#" class="btn btn-common mag">SIGN UP, It's free</a>
+                  <a href="get-started/register.html" class="btn btn-common mag">SIGN UP, It's free</a>
                     </ul>
                   </div>
                   </div>
@@ -191,7 +191,7 @@
                 <div class="grid__column grid__column--3">
                     <div class="feature-item">
                         <div class="feature-item__icon">
-                          <div class="svg svg--zero-setup"></div>
+                          <div class=""><img src="assets/img/icons/SVGIcons/Zero.svg"></div>
                         </div>
                         <h3 class="feature-item__title">Zero Setup Fee</h3>
                         <p class="feature-item__description">No fee necessary to create an account on Giveasily. Register now, It’s absolutely Free!</p>
@@ -200,7 +200,7 @@
                 <div class="grid__column grid__column--3">
                     <div class="feature-item">
                         <div class="feature-item__icon">
-                            <div class="svg svg--date"></div>
+                            <div class=""><img src="assets/img/icons/SVGIcons/Pledge.svg"></div>
                         </div>
                         <h3 class="feature-item__title">Pledge Tracking</h3>
                         <p class="feature-item__description">Accept financial pledges & get smart tools for tracking all the pledges made by donors.</p>
@@ -210,7 +210,7 @@
                 <div class="grid__column grid__column--3 ">
                     <div class="feature-item">
                         <div class="feature-item__icon">
-                            <div class="svg svg--plugins"></div>
+                            <div class=""><img src="assets/img/icons/SVGIcons/Integration.svg"></div>
                         </div>
                         <h3 class="feature-item__title">Simple Integration</h3>
                         <p class="feature-item__description">Easily Integrate Giveasily into your website, mobile app, social media pages or CMS easily</p>
@@ -219,17 +219,17 @@
                 <div class="grid__column grid__column--3 ">
                     <div class="feature-item">
                         <div class="feature-item__icon">
-                            <div class="svg svg--next-day-payouts"></div>
+                            <div class=""><img src="assets/img/icons/SVGIcons/Next.svg"></div>
                         </div>
                         <h3 class="feature-item__title">Next Day Payout</h3>
-                        <p class="feature-item__description">Receive the value of financial donations & fees into your bank account the next day.</p>
+                        <p class="feature-item__description">Receive the value of financial donations & fees into your bank account by the next day.</p>
                     </div>
                 </div>
     
                 <div class="grid__column grid__column--3 global-u-clear">
                     <div class="feature-item">
                         <div class="feature-item__icon">
-                          <div class="svg svg--instalments"></div>
+                          <div class=""><img src="assets/img/icons/SVGIcons/reoccur.svg"></div>
                         </div>
                         <h3 class="feature-item__title">Recurring Giving</h3>
                         <p class="feature-item__description">Allow donors to schedule weekly and monthly recurring financial gifts automatically.</p>
@@ -238,7 +238,7 @@
                 <div class="grid__column grid__column--3">
                     <div class="feature-item">
                         <div class="feature-item__icon">
-                            <div class="svg svg--convenient"></div>
+                            <div class=""><img src="assets/img/icons/SVGIcons/Raise.svg"></div>
                         </div>
                         <h3 class="feature-item__title">Raise Funds Easily</h3>
                         <p class="feature-item__description">Accept donations from  your supporters to support any worthy cause or project easily.</p>
@@ -248,7 +248,7 @@
                 <div class="grid__column grid__column--3">
                     <div class="feature-item">
                         <div class="feature-item__icon">
-                            <div class="svg svg--security"></div>
+                            <div class=""><img src="assets/img/icons/SVGIcons/Security.svg"></div>
                         </div>
                         <h3 class="feature-item__title">Bank-Level Security</h3>
                         <p class="feature-item__description">Giveasily is a PCI DSS Level 1 Secure with 256 bit SSL. We don't joke with security.</p>
@@ -257,7 +257,7 @@
                 <div class="grid__column grid__column--3">
                     <div class="feature-item">
                         <div class="feature-item__icon">
-                            <div class="svg svg--reporting"></div>
+                            <div class=""><img src="assets/img/icons/SVGIcons/Reporting.svg"></div>
                         </div>
                         <h3 class="feature-item__title">Real-time Reporting</h3>
                         <p class="feature-item__description">Gain reliable insight from reports & behavioral analytics from your back office in real-time.</p>
@@ -266,7 +266,7 @@
                 <div class="grid__column grid__column--3">
                   <div class="feature-item">
                       <div class="feature-item__icon">
-                          <div class="svg svg--people"></div>
+                          <div class=""><img src="assets/img/icons/SVGIcons/Membership.svg"></div>
                       </div>
                       <h3 class="feature-item__title">Membership Mgt. Tool</h3>
                       <p class="feature-item__description">Keep track of your members, donors, membership fee and renewal dates all in one place.</p>
@@ -275,7 +275,7 @@
               <div class="grid__column grid__column--3">
                 <div class="feature-item">
                     <div class="feature-item__icon">
-                        <div class="svg svg--subscribe"></div>
+                        <div class=""><img src="assets/img/icons/SVGIcons/Volunteer.svg"></div>
                     </div>
                     <h3 class="feature-item__title">Volunteer Mgt. Tool</h3>
                     <p class="feature-item__description">Seamlessly tract volunteers to your specific project and get real-time volunteer report & data analytics.</p>
@@ -284,7 +284,7 @@
             <div class="grid__column grid__column--3">
               <div class="feature-item">
                   <div class="feature-item__icon">
-                      <div class="svg svg--multicurrency"></div>
+                      <div class=""><img src="assets/img/icons/SVGIcons/Tithe.svg"></div>
                   </div>
                   <h3 class="feature-item__title">Accept Tithe & Offering</h3>
                   <p class="feature-item__description">Collect tithe, offering or pledges from willing church members anywhere & anytime.</p>
@@ -293,7 +293,7 @@
           <div class="grid__column grid__column--3">
             <div class="feature-item">
                 <div class="feature-item__icon">
-                    <div class="svg svg--hassle-free"></div>
+                    <div class=""><img src="assets/img/icons/SVGIcons/Email.svg"></div>
                 </div>
                 <h3 class="feature-item__title">Instant Email Receipts</h3>
                 <p class="feature-item__description">Donors will instantly receive email receipt with the detail of every donation they made.</p>
@@ -355,35 +355,33 @@
       <div class="row">
 
           <div style="line-height: 20px;" class="col-md-4">
-             <h4 style="font-size: 16px; color: #1E0E3C;"> <b class="m-b-20">Solutions</b> </h4>
-                  <p class="m-t-20"><a href="#/product/invoicing">Pledge Tracking</a></p>
-                  <p><a href="#/product/payments">Recurring Giving</a></p>
-                  <p><a href="#/product/transfers">Save2Give</a></p>
-                  <p><a href="#/product/dashboard">Give ‘n’ Earn</a></p>
-                  <p><a href="#/product/checkout">Volunteer Mgt. Tool</a></p>
-                  <p><a href="#/bots">Membership Mgt. Tool</a></p>
-                  <p><a href="#/bots">Giveathron</a></p>
-                  <p><a href="#/bots">Developer Tools</a></p>
+             <h4 style="font-size: 16px; color: #1E0E3C;"> <b class="m-b-20">SOLUTIONS</b> </h4>
+                  <p class="m-t-20"><a href="get-started/pledge-tracking.html">Pledge Tracking</a></p>
+                  <p><a href="get-started/recurring-giving.html">Recurring Giving</a></p>
+                  <p><a href="get-started/save2give.html">Save2Give</a></p>
+                  <p><a href="get-started/givenearn.html">Give ‘n’ Earn</a></p>
+                  <p><a href="get-started/volunteer-mgmt-tool.html">Volunteer Mgt. Tool</a></p>
+                  <p><a href="get-started/membership-mgmt.html">Membership Mgt. Tool</a></p>
+                  <p><a href="get-started/giveathron.html">Giveathron</a></p>
+                  <p><a href="get-started/developer-tools.html">Developer Tools</a></p>
           </div>
 
           <div style="line-height: 20px;" class="col-md-4">
-              <h4 style="font-size: 16px; color: #1E0E3C;"><b class="m-b-20"> Company </b></h4>
-              <p class="m-t-20"><a href="pricing.html">Pricing</a></p>
-              <p><a href="https://#" target="_blank">Blog</a></p>
-              <p><a href="#/brand">Brand</a></p>
+              <h4 style="font-size: 16px; color: #1E0E3C;"><b class="m-b-20"> COMPANY </b></h4>
+              <p class="m-t-20"><a href="company.html">About Us</a></p>
+              <p><a href="https://#" target="_blank">FAQs</a></p>
+              <p><a href="#/brand">Terms of Use</a></p>
               <p><a href="#/support">Support</a></p>
-              <p class="m-t-20"><a href="https://#/" target="_blank">Documentation</a></p>
-              <p><a href="https://#/overview" target="_blank">API Reference</a></p>
-              <p><a href="http://#" target="_blank">API Status</a></p>
-              <p><a href="https://github.com/#" target="_blank">Open Source</a></p>
+              <p class="m-t-20"><a href="https://#/" target="_blank">Privacy Policy</a></p>
+              <p><a href="https://#/overview" target="_blank">CSR</a></p>
+              <p><a href="http://#" target="_blank">Blog</a></p>
           </div>
 
           <div style="line-height: 20px;" class="col-md-4"> 
-              <a href="../index.html" class="logo">
+              <a href="index.html" class="logo">
                 <img src="get-started/templates/giveasily/assets/images/logo-blue.png" height="25">
-              </a> <br><br>
-              <p>113, Allen Avenue, Ikeja GRA, Lagos, Nigeria.</p>
-                <p class="m-t-20">Our Office Address:
+              </a> <br>
+              <p style="margin-top: 8px;" class="m-t-20"><b>Temporary Office:</b>Lifeplus Complex, 113, Allen Avenue, Ikeja GRA, Lagos, Nigeria.</p>
               <p>+234 (0) 703 620 1650 </p>
               <p>+234 (0) 809 775 7937</p>
               <p>+234 (0) 805 027 6578 </p> 
